[project]
name = "yc-analytics"
version = "0.1.0"
description = "A Streamlit-based dashboard for analyzing Y Combinator company data."
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "plotly",
    "requests",
    "duckdb"
]

[tool.uv]
# UV-specific settings can be added here if needed

[tool.poetry]
name = "yc-analytics"
version = "0.1.0"
description = "A Streamlit-based dashboard for analyzing Y Combinator company data."
authors = ["Your Name <your@email.com>"]
package-mode = false